# scicomap

./: .gitignore  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  RELEASE_NOTES_1.1.0.md  justfile  pyproject.toml  setup.py
.github/workflows/: docs.yml  pages.yml  publish-testpypi.yml  publish.yml
docs/: requirements.txt
docs/marimo/: helpers.py  tutorial_app.py  tutorial_app_lite.py
docs/source/: Introduction.rst  api-reference.rst  cli-reference.rst  conf.py  contributing.rst  faq.rst  gallery.rst  getting-started.rst  index.rst  llm-access.rst  troubleshooting.rst  tutorial-marimo.rst  user-guide.rst
scicomap/: __init__.py  cblind.py  cmath.py  datasets.py  scicomap.py  utils.py
scripts/: build_llm_assets.py
src/scicomap/: __init__.py  cblind.py  cli.py  cmath.py  datasets.py  scicomap.py  utils.py
tests/cli/: test_cli.py
tests/core/: test_cmath.py  test_datasets.py
tests/docs/: test_build_llm_assets.py
