[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "scicomap.__version__"}

[tool.setuptools]
package-data = {"scicomap.data" = ["*.png", "*.npz", "*.gz", "*.jpg"]}

[project]
name = "scicomap"
dynamic = ["version"]
requires-python = ">=3.10"
description = "data visualization on maps with varying levels of granularity"
authors = [{name = "Thomas Bury", email = "bury.thomas@gmail.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["visualization", "color", "uniform", "scientific"]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "colorspacious",
    "colorcet",
    "cmcrameri",
    "cmocean",
    "cmasher >= 1.5.8",
    "palettable >= 3.3.0",
    "matplotlib >= 3.3.0",
    "typer >= 0.12.0",
    "rich >= 13.0.0",
]

[project.scripts]
scicomap = "scicomap.cli:app"

[project.urls]
homepage = "https://github.com/ThomasBury/scicomap"
documentation = "https://thomasbury.github.io/scicomap/"
repository = "https://github.com/ThomasBury/scicomap.git"
changelog = "https://github.com/ThomasBury/scicomap/releases"
Tracker = "https://github.com/ThomasBury/scicomap/issues"

[project.optional-dependencies]
docs = [
    "ipykernel",
    "ipython_genutils",
    "pandoc",
    "sphinx",
    "sphinxawesome-theme==5.0.0b5",
    "nbsphinx",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-tabs",
    "sphinx-autoapi",
]
lint = [
    "ruff"
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D200", "D205", "D400", "D403"]
ignore = [
    "E731",
    "E741",
    "F401",
    "F403",
    "F405",
    "F841",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"src/scicomap/cblind.py" = ["D200", "D205", "D400", "D403"]
"src/scicomap/cmath.py" = ["D200", "D205", "D400", "D403"]
"src/scicomap/datasets.py" = ["D200", "D205", "D400", "D403"]
"src/scicomap/scicomap.py" = ["D200", "D205", "D400", "D403"]
"src/scicomap/utils.py" = ["D200", "D205", "D400", "D403"]
